fix chat icons on mobile nav

--- a/less/header.less
+++ b/less/header.less
@@ -226,7 +226,7 @@
 		// margin-top: 1em;
 		border-top: 1px solid rgba(163, 163, 163, 0.5);
 		padding: 0 5px 0 5px;
-		
+
 		a {
 			display: block;
 			text-align: center;
@@ -307,8 +307,8 @@
 .unread-count:after {
 	content: attr(data-content);
 	position: absolute;
-    	left: 23px;
-    	top: 10px;
+	left: 23px;
+	top: 10px;
 	font-size: 10px;
 	text-align: center;
 	border: 1px solid #890405;
@@ -325,8 +325,8 @@
 
 #mobile-menu [component="notifications/icon"].unread-count:after, .slideout-menu .unread-count:after {
 	position: relative;
-    	left: -6px;
-    	top: -7px;
+	left: -6px;
+	top: -7px;
 }
 
 #search-form {
@@ -383,4 +383,22 @@
 		position: absolute;
 		left: 36px;
 	}
+}
+
+.cd-menu__sliding-menu-secondary {
+
+  .chat-list {
+    img {
+      width: 32px;
+      border-radius: 100%;
+      margin-right: 8px;
+    }
+
+    .user-icon {
+      height: 32px;
+      width: 32px;
+      border-radius: 100%;
+      margin-right: 8px;
+    }
+  }
 }
